--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "ts-jest": "^29.2.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.12"
   }
 }
