--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "date-fns": "^3.6.0",
-    "dayjs": "^1.11.12"
+    "dayjs": "^1.11.12",
+    "flatpickr": "^4.6.13"
   }
 }
